--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lista de Tarefas</title>
+  <title>Minhas Tarefas</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="app-container">
     <h1>Minhas Tarefas</h1>
-    
+
     <div class="task-form">
       <input type="text" id="task-title" placeholder="Nova tarefa..." />
       <select id="task-category">
@@ -17,11 +17,24 @@
         <option value="Trabalho">Trabalho</option>
         <option value="Estudos">Estudos</option>
       </select>
+      <label>
+        <input type="checkbox" id="task-today" />
+        Tarefa do dia
+      </label>
       <input type="datetime-local" id="task-reminder" />
       <button onclick="addTask()">Adicionar</button>
     </div>
 
+    <div class="filters">
+      <button onclick="filterTasks('all')">Todas</button>
+      <button onclick="filterTasks('today')">Do dia</button>
+    </div>
+
+    <h2>Tarefas pendentes</h2>
     <div id="task-list" class="task-list"></div>
+
+    <h2>Tarefas concluídas</h2>
+    <div id="completed-list" class="task-list"></div>
   </div>
 
   <script src="script.js"></script>
