--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="filters">
       <button onclick="filterTasks('all')">Todas</button>
-      <button onclick="filterTasks('today')">Do dia</button>
+      <button class="chip-button" onclick="filterTasks('today')">Tarefas do Dia</button>
     </div>
 
     <h2>Tarefas pendentes</h2>
